[package]
name = "cmmc"
version = "0.16.5"
description = "Offline CMMC / NIST 800-171 compliance application"
authors = ["Neal Fennimore"]
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri runs; main.rs is a thin entry point. This split
# keeps the door open for mobile targets later.
[lib]
name = "cmmc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Used by `tauri dev` for faster, debuggable builds.
custom-protocol = ["tauri/custom-protocol"]
