[package]
name = "cmmc"
# Not the shipped app version: tauri.conf.json reads it from client/package.json,
# and CI overrides it with the release tag. Kept in sync automatically by the
# npm "version" hook (client/scripts/sync-tauri-version.mjs) on each release.
version = "1.7.1"
description = "Offline CMMC / NIST 800-171 compliance application"
authors = ["Neal Fennimore"]
license = "Elastic-2.0"
edition = "2021"
rust-version = "1.77.2"

# The library is what Tauri runs; main.rs is a thin entry point. This split
# keeps the door open for mobile targets later.
[lib]
name = "cmmc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Licensing (keygen.sh): activation over HTTPS, then offline verification of
# the signed machine file. The reqwest major matches the one tauri already
# pulls in so we share the stack.
reqwest = { version = "0.13", features = ["json"] }
ed25519-dalek = "2"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
machine-uid = "0.5"
gethostname = "0.4"
time = { version = "0.3", features = ["parsing", "formatting", "macros"] }

# Self-update via Keygen's Tauri engine — only on platforms where the updater
# can install in place. Linux ships .deb/.rpm and is notify-only.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tauri-plugin-updater = "2"

[features]
# Used by `tauri dev` for faster, debuggable builds.
custom-protocol = ["tauri/custom-protocol"]
